# cloud-viewer

./: .gitignore  FRONTEND_ORTHO_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-green-mushroom-0c30e6e0f.yml  backend.yml  frontend.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_ortho_local.sh  worker.py
apps/api/.github/workflows/: deploy.yml
apps/api/.kiro/specs/api-integration-doc/: requirements.md
apps/api/.kiro/specs/backend-api-enhancements/: IMPLEMENTATION_NOTES.md  design.md  requirements.md  tasks.md
apps/api/.kiro/specs/complete-azure-api/: design.md  requirements.md  tasks.md
apps/api/.kiro/specs/ortho-upload-feature/: design.md  requirements.md  tasks.md
apps/api/config/: main.py
apps/api/docs/: API_DOCUMENTATION.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_BUILD_TROUBLESHOOTING.md  LOCAL_TESTING_RESULTS.md  ORTHO_DEPLOYMENT_GUIDE.md  ORTHO_UPLOAD_FRONTEND.md  ROLLBACK_PLAN.md  USER_GUIDE.md
apps/api/models/: Job.py  Project.py
apps/api/routes/: jobs.py  process.py  projects.py  stats.py
apps/api/storage/: az.py  db.py
apps/api/utils/: main.py  ortho.py  potree.py  thumbnail.py
apps/web/: astro.config.mjs  env.example  package.json
apps/web/public/: staticwebapp.config.json
apps/web/scripts/: organize-dist.mjs
apps/web/src/api/: BaseAPI.js  JobAPI.js  ProjectAPI.js  index.js
apps/web/src/components/: PotreeViewer.jsx  (+1 more)
scripts/: sync-potree.mjs
(+29 files in other folders)
